--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,11 @@
 cmake_minimum_required(VERSION 2.8)
 
-project(CheatsheetTemplate NONE)
+project(NLASP NONE)
 include(UseLATEX)
 
 add_custom_target(
-    writegitid ALL
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/write-gitid.sh
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-)
+  writegitid ALL
+  COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/write-gitid.sh
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
 
-add_latex_document(
-    nlasp_main.tex
-    FORCE_PDF
-    IMAGE_DIRS img
-    DEPENDS writegitid
-)
+add_latex_document(nlasp_main.tex FORCE_PDF IMAGE_DIRS img DEPENDS writegitid)
